[project]
name = "api-mimic"
version = "2.0"
description = "API mimicry"
authors = [
  { name = "Aubrey Rees", email = "aubrey@kleetope.net" }
]
license = { file = "LICENSE" }
readme = "README.rst"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/aubreyrees/api-mimic"
"Bug Tracker" = "https://github.com/aubreyrees/api-mimic/issues"


[project.optional-dependencies]
dev = ["tox","pytest","coverage","ruff","build","ipython"]
build = ["tox","build"]


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]


[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F" ,"W" ,"N","D","ANN"]
ignore = ["D212", "D203"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.coverage.run]
branch = true
source = ["api_mimic"]
